perf: improve performance at task service